--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Vestra Health</title>
+    <link rel="stylesheet" href="css/default.css"/>
   </head>
   <body>
     {{{body}}}
