--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,1 +1,15 @@
 <h1>Vestra Health</h1>
+<div class="row">
+  <form class="col s12">
+    <div class="row">
+      <div class="input-field col s6">
+          <input placeholder="Enter Email" id="email-login" type="text">
+          <label for="first_name">Email</label>
+        </div>
+        <div class="input-field col s6">
+          <input placeholder="Enter Password" id="password-login" type="text">
+          <label for="last_name">Password</label>
+        </div>
+    </div>
+  </form>
+</div>
