modified password input field to type password

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -7,7 +7,7 @@
           <label for="first_name">Email</label>
         </div>
         <div class="input-field col s6">
-          <input placeholder="Enter Password" id="password-login" type="text">
+          <input placeholder="Enter Password" id="password-login" type="password">
           <label for="last_name">Password</label>
         </div>
     </div>
