--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -10,6 +10,7 @@
           <input placeholder="Enter Password" id="password-login" type="password">
           <label for="last_name">Password</label>
         </div>
+        <a class="waves-effect waves-light btn"><i class="material-icons right">done</i>Submit</a>
     </div>
   </form>
 </div>
