--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -4,11 +4,11 @@
     <div class="row">
       <div class="input-field col s6">
           <input placeholder="Enter Email" id="email-login" type="text">
-          <label for="first_name">Email</label>
+          <label for="email">Email</label>
         </div>
         <div class="input-field col s6">
           <input placeholder="Enter Password" id="password-login" type="password">
-          <label for="last_name">Password</label>
+          <label for="password">Password</label>
         </div>
         <a class="waves-effect waves-light btn"><i class="material-icons right">done</i>Submit</a>
     </div>
