--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -3,19 +3,16 @@
   <head>
     <meta charset="utf-8">
     <title>Vestra Health</title>
-    <!--Import Google Icon Font-->
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <!-- Google Fonts -->
-    <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
-    <!-- Compiled and minified CSS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/css/materialize.min.css">
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <!-- Custom styles -->
-    <link rel="stylesheet" href="css/default.css"/>
+    <link rel="stylesheet" href="css/master.css"/>
 
   </head>
   <body>
+    <header>
+
+    </header>
     {{{body}}}
 
     <!-- jQuery CDN -->
