--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,16 +1,4 @@
-<h1>Vestra Health</h1>
-<div class="row">
-  <form class="col s12">
-    <div class="row">
-      <div class="input-field col s6">
-          <input placeholder="Enter Email" id="email-login" type="text">
-          <label for="email">Email</label>
-        </div>
-        <div class="input-field col s6">
-          <input placeholder="Enter Password" id="password-login" type="password">
-          <label for="password">Password</label>
-        </div>
-        <a class="waves-effect waves-light btn"><i class="material-icons right">done</i>Submit</a>
-    </div>
-  </form>
+<div id="landing">
+  <h2>Landing Page</h2>
 </div>
+
