--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -12,7 +12,7 @@
     <div id="login">
       <div id="login-fields">
         <input type="text" name="email" placeholder="Enter Email">
-        <input type="password" name="password">
+        <input type="password" name="password" placeholder="Enter Password">
         <button type="submit">Submit</button>
       </div>
     </div>
