--- a/public/css/master.css
+++ b/public/css/master.css
@@ -1,3 +1,3 @@
 @import url("normalize.css");
-/*@import url("https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css");*/
+@import url("https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css");
 @import url("default.css");
